--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 body{
     margin:0;
-    background-color: whitesmoke;
+    background-color: #121212;
 }
 
 *{
@@ -14,4 +14,5 @@ body{
 html{
     scroll-behavior: smooth;
 }
+
 
